# WasmEdge_fork

.github/workflows/: build.yml  reusable-build-on-ubuntu.yml  reusable-build-on-windows.yml
test/spec/: CMakeLists.txt  spectest.cpp
